--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,3 +198,123 @@ footer .container {
 footer .menu a{
 	color: #6c757d;
 }
+
+.menu .open-menu {
+	/* Para ele aparecer normal, porque com dispositivo pequeno colocamos ele para display: block */
+	display: none;
+}
+
+/* todo código responsivo, os estilos que queremos que acontelça em certos tamanho de tela
+precisa tá dentro de uma midia query  */
+/* Como se fosse um if validando o tamanho da tela 
+no caso aí seria:
+	se o tamanho máximo da tela for de 450px executes as açoes 
+*/
+@media(max-width: 450px){
+
+	/* Esse botão é o que faz parte da lista da nav */
+	.menu .close-menu {
+		display: block;
+		text-align: right; /*jogando para a direita*/
+		background-color: #eee;
+	}
+
+	.menu .close-menu button {
+		background: none;
+		border: none;
+		font-size: 2em;
+		padding: .75rem 1rem;
+	}
+
+	.menu.open .backdrop {
+		opacity: .5;
+	}
+
+	/* sem contorno */
+	.menu .backdrop {
+		/* opacity pode deixar tudo em transparencia */
+		opacity: 0;
+		background-color: #000;
+		transition: opacity .15s linear;
+		position: fixed; /*com isso se tivesse um scroll, poderia dar scrolling mas ele ainda ficará no local*/
+		width: 100%;
+		height: 100vh;
+		z-index: 1;
+		left: 0;
+		top: 0;
+
+	}
+
+
+	header .header-border{
+
+		/* Poderia até usar, mas o space-between fica melhor */
+		/* justify-content: flex-end; */
+		justify-content: space-between;
+
+	}
+
+	/*Sobrescrevendo ul do .menu*/
+	.menu ul {
+		/* esconder o menu, porque queremos que ele apareca de lado */
+		display: block;
+		position: fixed;
+		top: 0;
+		right: -80vw; /*para ele se esconder*/
+		width: 80vw;
+		height: 100vw;
+		background-color: #FFF;
+
+		/* para sobrescrever o formulário - acredito que ficar acima */
+		z-index: 2;
+		
+		/* efeito de transicao 
+			ele estará em right: -80vw;
+		*/
+		transition: right 0.2s linear;
+
+
+	}
+	
+	/* junto porque a classe open ta junto do elemento menu */
+	.menu.open ul{
+		/* estilo do menu aberto| o que vai vir é esse ul, ou seja,a lista, que ficará por cima do botão */
+
+		right: 0;
+	}
+
+	.menu.open a {
+		color: #000;
+		padding: 20px;
+		display: block;
+		font-weight: 100;
+		border-bottom: #CCC 1px solid;
+	}
+
+
+	.menu {
+		width: 60px;
+		flex: initial;
+	}
+
+	.menu .open-menu {
+		/* Para ele aparecer em forma de bloco */
+		display: block;
+		font-size: 2em;
+		padding: .9rem;
+		flex: 1;
+		background: none;
+		border: none;
+		color: #FFF;
+
+	}
+
+	#register {
+		width: 90%;
+		margin: 0 5%;
+		max-width: initial;
+		/* nao encostar */
+		right: initial;
+	}
+
+}
